# resource-website-salvo-sea

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
config/: config.yml
data/: resource_website.sql  resource_website20240703.sql
src/: config.rs  main.rs
src/cerror/: mod.rs  rbac.rs  role.rs  user.rs
src/common/: mod.rs  response.rs
src/constant/: mod.rs
src/controller/: carousel_controller.rs  casbin_resource_controller.rs  custom_controller.rs  mod.rs  resource_category_controller.rs  resource_language_controller.rs  sys_resources_controller.rs  system_controller.rs  system_role_controller.rs  system_user_controller.rs  website_controller.rs
src/dtos/: casbin_resource_dto.rs  count_data_dto.rs  custom_orders_dto.rs  custom_recharge_dto.rs  custom_recharge_records_dto.rs  custom_user_dto.rs  mod.rs  query_struct.rs  sys_carousel_dto.rs  sys_category_dto.rs  sys_image_dto.rs  sys_language_dto.rs  sys_menus_dto.rs  sys_resource_images_dto.rs  sys_resources_dto.rs  sys_user_dto.rs  sys_website_dto.rs  system_role_dto.rs  system_user_dto.rs  withdrawals_dto.rs
src/entities/: casbin_resource.rs  casbin_rule.rs  count_data.rs  custom_orders.rs  custom_recharge.rs  custom_recharge_records.rs  custom_user.rs  mod.rs  prelude.rs  sys_carousel.rs  sys_image.rs  sys_menus.rs  sys_resource_category.rs  sys_resource_images.rs  sys_resource_language.rs  sys_resources.rs  sys_user.rs  sys_website_info.rs  system_role.rs  system_user.rs  withdrawals.rs
src/middleware/: cors.rs  jwt.rs  jwt_auth.rs  mod.rs
src/routers/: admin.rs  custom.rs  mod.rs
src/services/: admin_user_service.rs  casbin_resource_service.rs  custom_user_service.rs  mod.rs  resource_category_service.rs  resource_language_service.rs  sys_carousel_service.rs  sys_menu_service.rs  sys_resource_service.rs  system_role_service.rs  system_user_service.rs  website_service.rs
src/utils/: app_error.rs  app_writer.rs  captcha_utils.rs  casbin.rs  check_user.rs  db.rs  mod.rs  redis_utils.rs  snowflake.rs
