[package]
name = "source_website_salvo_sea"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
argon2 = { version = "0.5.3", features = [] }
captcha-rs = "0.2.10"
clia-tracing-config = "0.2.7"
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
rand = { version = "0.8.5", features = [] }
redis = { version = "0.25.3", features = [] }
rust-embed = "8.0.0"
salvo = { version = "0.67.0", features = [
    "quinn",
    "anyhow",
    "logging",
    "cors",
    "oapi",
    "jwt-auth",
    "rustls",
    "catch-panic",
    "cookie",
    "serve-static",
    "test",
] }
sea-orm = { version = "0", features = [
    "runtime-tokio-native-tls",
    "sqlx-mysql",
] }
serde = "1.0.196"
serde_yaml = "0.9.31"
thiserror = "1.0.57"
time = "0.3.28"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.18", features = ["derive"] }
async-std = "1.12.0"
lazy_static = "1.4.0"
bb8-redis = "0.15.0"
chrono = "0.4.38"
serde_json = "1.0.116"
anychain-tron = "0.2.3"
