[package]
name = "source_website_salvo_sea"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
argon2 = { version = "0.5.3", features = [] }
captcha-rs = "0.2.10"
clia-tracing-config = "0.2.7"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
rand = { version = "0.8.5", features = [] }
redis = { version = "0.25.3", features = [] }
rust-embed = "8.4.0"
salvo = { version = "0.68.0", features = [
    "quinn",
    "anyhow",
    "logging",
    "cors",
    "oapi",
    "jwt-auth",
    "rustls",
    "catch-panic",
    "cookie",
    "serve-static",
    "test",
] }
sea-orm = { version = "0.12.15", features = [
    "runtime-tokio-native-tls",
    "sqlx-mysql",
] }
serde = "1"
serde_yaml = "0.9"
thiserror = "1.0.57"
time = "0.3.36"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.18.1", features = ["derive"] }
async-std = "1.12.0"
lazy_static = "1.4.0"
bb8-redis = "0.15.0"
chrono = "0.4.38"
serde_json = "1.0.117"
anychain-tron = "0.2.3"
casbin = "2.2.0"
sea-orm-adapter = "0.3.4"
snowflaked = "1"
